style.css
@import url('https://fonts.googleapis.com/css2?family=Exo+2:wght@400;700&display=swap');

html, body {
    margin: 0;
    padding: 0;
    background-image: url(img/table.png);
    font-family: "Exo 2", sans-serif;
    height: 100vh;
}

body {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

button {
    background-color: #fff100;
    cursor: pointer;
    border: none;

}

button#new-deck {
    align-self: flex-start;
    padding: 5px;
}

button.draw {
    font-size: 1.2em;
    padding: 5px;
}

div.card-slot {
    border: 1px solid black;
    border-radius: 5px;
    height: 120px;
    width: calc(120px * 5 / 7);
}

div.card-slot:nth-of-type(1) {
    margin-bottom: 50px;
}

img.card {
    width: 100%;
    height: 100%;
}

